# vijai

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
include/horcrux/: file_tree.hpp  system_clipboard.hpp  terminal_session.hpp
src/: file_tree.cpp  system_clipboard.cpp  terminal_session.cpp  workspace_ftxui.cpp
tests/: file_tree_tests.cpp  terminal_session_tests.cpp
